# Acolhe

./: .env.example  .gitattributes  .gitignore  README.md  check-prereqs.ps1  docker-compose.yml  flutter-local.ps1  run-tablet.ps1  setup-mobile.ps1  start-backend.ps1  test-backend.ps1
acolhe-backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
acolhe-backend/alembic/: env.py
acolhe-backend/alembic/versions/: 20260420_0001_initial.py
acolhe-backend/app/: main.py
acolhe-backend/app/api/: router.py
acolhe-backend/app/core/: config.py  database.py  logging.py  rate_limit.py  security.py
acolhe-backend/app/data/: mock_seed.json  resources.json
acolhe-backend/app/integrations/llm/: client.py
acolhe-backend/app/models/: __init__.py  base.py  chat.py  journal.py  resources.py  risk.py  settings.py  support.py  user.py
acolhe-backend/app/modules/auth/: router.py  schemas.py  service.py
acolhe-backend/app/modules/chat/: response_engine.py  router.py  schemas.py  service.py
acolhe-backend/app/modules/journal/: router.py  schemas.py  service.py
acolhe-backend/app/modules/resources/: router.py  (+2 more)
acolhe-backend/app/prompts/: acolhe_system_prompt.md
acolhe-backend/app/repositories/: auth_repository.py  chat_repository.py  journal_repository.py  resources_repository.py  settings_repository.py  support_repository.py
acolhe-backend/app/schemas/: common.py
acolhe-backend/app/services/: seed.py
acolhe-backend/tests/: conftest.py  test_auth.py  test_chat.py  test_chat_intelligence.py  test_journal.py  test_risk.py  test_support_network.py
(+90 files in other folders)
