[project]
name = "acolhe-backend"
version = "0.1.0"
description = "Backend do Acolhe: apoio inicial seguro, risco e organização de relatos."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.8.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
